# llm-contract-harness

./: .dockerignore  .env.example  .gitignore  ACTION_PLAN.md  AGENTS.md  ARCHITECTURE.md  AUDIT.md  CLEANUP.md  COMPILER_AUDIT_GPT5.3.md  COMPILER_AUDIT_OPUS4.6.md  CONTROL_SURFACE.md  Dockerfile  FINDINGS_LEDGER.md  INVARIANTS.md  LOOP_EXAMPLE.md  Makefile  PROMPT.md  Procfile  README.md  ROADMAP.md  STATE.md  STATE_AWARE_PLAN.md  STATE_AWARE_REPORT.md  TO_FIX.md  WORK_ORDER_PROMPT.md  alembic.ini  docker-compose.yml  example_work_order.json  pyproject.toml  requirements.txt  run_work_orders.sh  spec.txt  stress_test.py  task.md  tests.sh  wo_01_scaffold.json  wo_02_edit_hello.json  wo_03_math_utils.json
adversarial_audits/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md
alembic/: env.py
dev_prompts/: ADVERSARIAL_TEST_REVIEW.md  AGENTS.md  TEST_PLAN.md
docs/: ARCHITECTURE.md  CONFIG_DEFAULTS.md  INVARIANTS.md  STATE.md
examples/: CREATE_WORK_ORDERS_PROMPT.md  WORK_ORDER_PROMPT.md  WORK_ORDER_PROMPT3.md  WORK_ORDER_PROMPT4.md  hangman.txt  maze.txt  run_wo3.sh  run_wo4.sh  run_wo5.sh  run_work_orders.sh  smoke.txt  wordle.txt
factory/: FACTORY_PROMPT.md  __init__.py  __main__.py  console.py  defaults.py  graph.py  invariants.py  llm.py  loop.py  main.py  nodes_po.py  nodes_se.py  nodes_tr.py  run.py  runtime.py  schemas.py  se_node.py  util.py  workspace.py
infra/: apprunner.cfn.yaml  deploy.sh
llmch/: __init__.py  __main__.py
old_dev_prompts/: ACTION_PLAN.md  AUDIT.md  CLEANUP.md  COMPILER.md  PLANNER.md  PLANNER_FACTORY_CONTRACT.md  TEST_HARDENING_RESPONSE.md  TEST_HARDENING_SUMMARY.md
planner/: PLANNER_PROMPT.md  __init__.py  __main__.py  cli.py  compiler.py  defaults.py  io.py  openai_client.py  prompt_template.py  validation.py
shared/: event_log.py  run_context.py
tests/: conftest.py  test_cli.py  test_console.py  test_defaults_canonical.py  test_dump_defaults.py  test_end_to_end.py  test_graph.py  test_llmch_cli.py  test_nodes.py  test_safety.py  test_schemas.py  (+2 more)
(+740 files in other folders)
