[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-contract-harness"
version = "0.1.0"
description = "Structurally enforced work orders for LLM code generation"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "langgraph>=0.2",
    "httpx>=0.27",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
llmch = "llmch.__main__:main"

[tool.setuptools.packages.find]
include = ["planner*", "factory*", "shared*", "llmch*"]
